createGetCategories
