# src/controllers/getCategories.js
@@ -1,0 +1,10 @@
+import { Category } from '../db/models/Category.js';
+
+export const getCategories = async (req, res, next) => {
+  try {
+    const categories = await Category.find();
+    res.status(200).json(categories);
+  } catch (error) {
+    next(error);
+  }
+};
