# src/routers/categories.js
@@ -1,5 +1,8 @@
 import { Router } from 'express';
+import { getCategories } from '../controllers/getCategories.js';
 
 const categoriesRouter = Router();
+
+categoriesRouter.get('/', getCategories);
 
 export default categoriesRouter;
